[gd_scene load_steps=14 format=3 uid="uid://c57f558j5tnsc"]

[ext_resource type="Script" path="res://tools/minigames/rhythm/play/key.gd" id="1_bcnxa"]
[ext_resource type="PackedScene" uid="uid://bejn8g103mp0u" path="res://tools/minigames/rhythm/util/editor_plane.tscn" id="2_j1vrs"]
[ext_resource type="PackedScene" uid="uid://dywsugc8b2gts" path="res://tools/minigames/rhythm/util/editor_point.tscn" id="3_yqybd"]
[ext_resource type="AudioStream" uid="uid://dowyseood26b1" path="res://tools/minigames/rhythm/assets/samples/hit.mp3" id="4_25p1v"]
[ext_resource type="Texture2D" uid="uid://y40mfo1sv1sd" path="res://tools/minigames/rhythm/assets/key.png" id="4_d8h3b"]
[ext_resource type="Texture2D" uid="uid://b60x32s3y1ntt" path="res://tools/minigames/rhythm/assets/star.png" id="6_hw10q"]

[sub_resource type="QuadMesh" id="QuadMesh_c0kiq"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yer7t"]
render_priority = 2
transparency = 1
no_depth_test = true
albedo_texture = ExtResource("4_d8h3b")
billboard_keep_scale = true

[sub_resource type="Curve" id="Curve_b4rd5"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1e-05, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_5ne33"]
curve = SubResource("Curve_b4rd5")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_3fgsh"]
direction = Vector3(0, 0, -1)
spread = 15.0
flatness = 1.0
initial_velocity_min = 2.75
initial_velocity_max = 3.75
gravity = Vector3(0, 0, 5)
attractor_interaction_enabled = false
scale_over_velocity_max = 225.0
scale_over_velocity_curve = SubResource("CurveTexture_5ne33")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_n5gfs"]
render_priority = 1
transparency = 1
albedo_color = Color(0.721569, 0.54902, 0.701961, 0.462745)
albedo_texture = ExtResource("6_hw10q")
emission_enabled = true
emission = Color(0.952941, 0.85098, 0.721569, 1)
emission_energy_multiplier = 5.0

[sub_resource type="QuadMesh" id="QuadMesh_nua2l"]
material = SubResource("StandardMaterial3D_n5gfs")
size = Vector2(0.25, 0.25)
orientation = 1

[node name="Key" type="Node3D"]
script = ExtResource("1_bcnxa")

[node name="Editor" type="Node3D" parent="."]

[node name="KeyPlane" parent="Editor" instance=ExtResource("2_j1vrs")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 2.08165e-12, 2.08165e-12, 2.08165e-12)

[node name="NoteSpawnPosition" parent="Editor" instance=ExtResource("3_yqybd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -10)
skeleton = NodePath("../..")

[node name="KeyMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("QuadMesh_c0kiq")
surface_material_override/0 = SubResource("StandardMaterial3D_yer7t")

[node name="ParticleEmitter" type="GPUParticles3D" parent="KeyMesh"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
cast_shadow = 0
emitting = false
amount = 48
lifetime = 2.0
fixed_fps = 20
process_material = SubResource("ParticleProcessMaterial_3fgsh")
draw_pass_1 = SubResource("QuadMesh_nua2l")

[node name="Notes" type="Node3D" parent="."]

[node name="HitSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_25p1v")
volume_db = -18.0
max_polyphony = 10
